--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1",
     "ws": "^8.13.0"
+  },
+  "engines": {
+    "npm": ">=8.0.0 <9.0.0",
+    "node": ">=14.20.1"
   }
 }
